[package]
authors = ["Polkadex Authors"]
description = "Pallet for Handling Assets from multiple Bridges"
edition = "2021"
homepage = "https://polkadex.trade"
name = "asset-handler"
version = "1.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, default-features = false, features = ["max-encoded-len"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

frame-support = { workspace = true, default-features = false }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-system = { workspace = true, default-features = false }


sp-io = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

chainbridge = { path = "../chainbridge", default-features = false }

[dev-dependencies]
pallet-assets = { workspace = true , default-features = false}
pallet-balances = { workspace = true , default-features = false}


[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
	"chainbridge/std",
	"pallet-assets/std",
	"pallet-balances/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"chainbridge/runtime-benchmarks"
]
